--- a/front-server/src/Components/Main/Main.module.css
+++ b/front-server/src/Components/Main/Main.module.css
@@ -74,23 +74,6 @@
     to {
       transform: translateY(-102.5%);
     }
-    /* 0% {
-      transform: translateY(100%);
-      opacity: 0;
-    }
-    10% {
-      transform: translateY(90%);
-      opacity: 1;
-    }
-    90% {
-      transform: translateY(0);
-      opacity: 1;
-    }
-    100% {
-      transform: translateY(-100%);
-      opacity: 0;
-    } */
-    
   }
 
   .move {
@@ -99,10 +82,10 @@
     animation-timing-function: linear;
   }
 
-  .move.active {
+  /* .move.active {
     z-index: 1;
     animation-play-state: running;
-  }
+  } */
 
 
   /* 장원급제 컨포넌트 폰트  */
