--- a/front-server/src/Components/Main/Main.module.css
+++ b/front-server/src/Components/Main/Main.module.css
@@ -7,13 +7,6 @@
     margin-right: 0.2rem;    
   }
 
-  /* .mainbg {
-    background-image: url('/public/Assets/Intro/Group7.png');
-    background-repeat: no-repeat;
-    background-size: contain;
-    background-position: top;
-  } */
-
   .bottomRight {
     background: linear-gradient(to bottom right, #F0ECE9 50%, #ffffff 50% );
   }
@@ -63,6 +56,16 @@
     background-position-y: center;
     background-repeat: no-repeat;
     background-size: contain;
+  }
+
+  .menu {
+    width : 2rem;
+    height : 2rem;
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position-y: center;
+    margin : 0.5rem auto
+
   }
 
 
