--- a/front-server/src/Components/Common/Common.module.css
+++ b/front-server/src/Components/Common/Common.module.css
@@ -62,7 +62,42 @@
     animation-delay: 2.6s;
   }
 
-  @keyframes ddongddong {
+  .errorAnimation {
+    animation: ddongddong2 4s infinite;
+    font-size: 2.2rem;
+    font-weight: 600;
+    font-family: EBSJSKMedium;
+  }
+
+  .errorAnimation:nth-child(1) {
+    animation-delay: .2s;
+  }
+  .errorAnimation:nth-child(2) {
+    animation-delay: .4s;
+  }
+  .errorAnimation:nth-child(3) {
+    animation-delay: .6s;
+  }
+  .errorAnimation:nth-child(4) {
+    animation-delay: .8s;
+  }
+  .errorAnimation:nth-child(5) {
+    animation-delay: 1s;
+  }
+  .errorAnimation:nth-child(6) {
+    animation-delay: 1.2s;
+  }
+  .errorAnimation:nth-child(7) {
+    animation-delay: 1.4s;
+  }
+  .errorAnimation:nth-child(8) {
+    animation-delay: 1.6s;
+  }
+  .errorAnimation:nth-child(9) {
+    animation-delay: 1.8s;
+  }
+
+  @keyframes ddongddong2 {
     0% {
       transform: translateY(0px);
     }
